--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "package": "node tasks/package.js"
   },
   "dependencies": {
-    "@mui/icons-material": "^7.3.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
